meilisearch/tests/dumps/snapshots/mod.rs/import_dump_v1_movie_raw/1.snap
---
source: meilisearch/tests/dumps/mod.rs
---
{
  "results": [
    {
      "uid": 0,
      "indexUid": "indexUID",
      "status": "succeeded",
      "type": "documentAdditionOrUpdate",
      "canceledBy": null,
      "details": {
        "receivedDocuments": 0,
        "indexedDocuments": 31968
      },
      "error": null,
      "duration": "PT9.317060500S",
      "enqueuedAt": "2021-09-08T09:08:45.153219Z",
      "startedAt": "2021-09-08T09:08:45.3961665Z",
      "finishedAt": "2021-09-08T09:08:54.713227Z"
    }
  ],
  "total": 1,
  "limit": 1,
  "from": 0,
  "next": null
}
